# SBERCourse

./: CMakeLists.txt  README.md  lexer.l  lexmessage.cpp  lexmessage.hpp  main.cpp
Examples/: 1.txt  2.txt
